--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "scripts": {
     "start": "node src/server.js",
-    "test": "mocha test/unit",
+    "test": "npm-run-all --parallel test:*",
+    "test:unit": "mocha test/unit",
+    "test:component": "mocha test/component",
     "watch": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "mongodb": "3.3.0-beta2"
   },
   "devDependencies": {
     "mocha": "6.2.0",
     "nodemon": "1.19.1",
+    "npm-run-all": "4.1.5",
     "supertest": "4.0.2"
   }
 }
