--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node src/server.js",
+    "start": "NODE_ENV=production node src/server.js",
+    "dev": "NODE_ENV=development node src/server.js",
     "test": "npm-run-all --parallel test:*",
     "test:unit": "mocha test/unit",
     "test:component": "mocha --exit test/component",
