--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "4.17.1",
+    "hbs": "4.0.4",
     "lodash.mapvalues": "4.6.0",
     "mongodb": "3.3.0-beta2",
     "why-is-node-running": "2.1.0"
